# Rats

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  build.gradle.kts  docker-compose.yaml  gradle.properties  justfile  settings.gradle.kts
.github/: renovate.json
.github/workflows/: ci-android.yaml  ci-rust.yaml  ci.yaml  deploy-api.yaml  release.yaml
api/: .env.template  Cargo.toml  Dockerfile
api/migrations/2024-10-05-082458_users/: up.sql
api/migrations/2024-10-11-142118_ratings_table/: up.sql
api/migrations/2024-10-24-082530_user_position/: down.sql  up.sql
api/migrations/2024-11-08-100104_news_danger/: down.sql  up.sql
api/migrations/2025-02-05-094833_train_line/: down.sql  up.sql
api/migrations/2025-02-05-115015_users_lines/: down.sql  up.sql
api/migrations/2025-02-05-144717_insert_metro_lines/: down.sql  up.sql
api/migrations/2025-02-09-202528_messages/: down.sql  up.sql
api/src/: db.rs  main.rs  pagination.rs  schema.rs
api/src/api/: auth.rs  messages.rs  mod.rs  ratings.rs  reports.rs  train_lines.rs  users.rs  utils.rs
api/src/models/: messages.rs  mod.rs  ratings_models.rs  reports_models.rs  train_lines_models.rs  users_models.rs
app/: build.gradle.kts
app/src/androidTest/java/com/rats/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/rats/: MainActivity.kt  MoreMenuActivity.kt  RatsApp.kt  TransportLinesActivity.kt
app/src/main/java/com/rats/factories/: HomeViewModelFactory.kt  LoginViewModelFactory.kt  MessageViewModelFactory.kt  MyWagonViewModelFactory.kt  PassengerViewModelFactory.kt  ProfileViewModelFactory.kt  (+4 more)
app/src/main/res/color/: bottom_menu_text_color.xml
app/src/main/res/drawable/: alert_icon.xml  baseline_chevron_left_24.xml  baseline_chevron_right_24.xml  bookmark_filled_icon.xml  bookmark_transparent_icon.xml  bottom_menu_background.xml  burger_menu.xml  camera.xml  camera_icon.xml  chat.xml  error_background.xml  follow_line_icon.xml  icon_user.xml  incident_icon.xml  item_alert_background.xml  logout_svg.xml  map_icon.xml  menu_item_rounded.xml  message_background_other.xml  message_background_self.xml  report_svg.xml  right_arrow_icon.xml  rounded_border.xml  safe_notification.xml  seat_svg.xml  settings_icon.xml  star_empty.xml  star_exclamation.xml  star_filled.xml  stations_icon.xml  transport_line_icon.xml  wagon_icon.xml  warning_notification.xml
app/src/main/res/layout/: activity_chat.xml  activity_home.xml  activity_login.xml  activity_main.xml  activity_more_menu.xml  activity_passenger.xml  activity_rating.xml  activity_report.xml  activity_settings.xml  activity_train_line.xml  activity_transport_lines.xml  activity_wagon.xml  chat_item_message.xml  chat_item_self_message.xml  fragment_bottom_menu.xml  fragment_bottom_navigation.xml  fragment_loading_error.xml  item_alert_train_view_holder.xml  item_chat_self_message.xml  item_comment_view_holder.xml  item_line_report_view_holder.xml  item_transport_line_view_holder.xml  item_wagon_user.xml  item_wagon_view_holder.xml  user_profile.xml
app/src/main/res/menu/: bottom_menu.xml  bottom_nav_menu.xml
app/src/main/res/mipmap-anydpi-v26/: train_icon_sample.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/raw/: map_style.json
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/rats/: ApiClientTest.kt  DateTest.kt  ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+89 files in other folders)
