[package]
name = "rats_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
diesel = "2.2.4"
diesel-async = { version = "0.5.0", features = ["postgres", "deadpool"] }
serde = { version = "1.0.210", features = ["derive"] }
dotenvy = "0.15.7"
password-auth = "1.0.0"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"

[profile.release]
lto = true
opt-level = 3

[profile.dev]
opt-level = "s"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
